--- a/2t2.css
+++ b/2t2.css
@@ -157,7 +157,7 @@ h4.job-title{margin:4px 0}
 .navbar-default.affix .nav>li>a,.navbar-default.affix .nav>li>a:focus{color:#222}
 .navbar-default.affix .nav>li>a:focus:hover,.navbar-default.affix .nav>li>a:hover{color:#F05F40}
 }
-header{min-height:auto;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;-o-background-size:cover;background-position:center;background-image:url(../img/header.jpg);color:#fff}
+header{min-height:auto;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;-o-background-size:cover;background-position:center;background-image:url(..users/1315/31/42/52/album/header10.jpg);color:#fff}
 header .header-content{padding:100px 15px}
 header .header-content .header-content-inner h1{font-weight:700;text-transform:uppercase;margin-top:0;margin-bottom:0;font-size:30px}
 header .header-content .header-content-inner hr{margin:30px auto}
