--- a/2t6.css
+++ b/2t6.css
@@ -202,7 +202,7 @@ header .header-content .header-content-inner p{font-size:18px;max-width:80%;marg
 ::selection{color:#fff;text-shadow:none;background:#222}
 img::selection{color:#fff;background:0 0}
 img::-moz-selection{color:#fff;background:0 0}
-.subscribe-button{font-size:12px;padding:7px 12px 8px;color:#fff;background:#2196f3}
+.subscribe-button font-size:13px;padding:8px 12px 8px;color:#fff;background:#2196f3;}
 .subscribe-button:hover{color:#f8f8f8;background:#1976d2}
 .follow-us li a:hover{color:#fff!important;border:1px solid #1976d2;background:#2196f3}
 .follow-us .fa{line-height:38px}
